--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ packages = [{include = "hexlet_code"}]
 python = "^3.8"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^5.0.4"
+pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
