--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -32,3 +32,12 @@ jobs:
       - name: Run tests
         run: |
           make test
+      # Test & publish code coverage
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v3.2.0
+        if: github.ref_name == 'main'
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
