--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,8 @@ isort-show-traceback = True
 
 # clean default ignore list
 ignore =
-
+  # imported but unused
+  gendiff/__init__.py: F401
 per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/scripts/*.py: WPS421
